@@ -8,7 +8,7 @@
 -->
 <table id='vboxSettingsUSBTable' style='width: 100%'>
 	<tr>
-		<td><label></label><input type='checkbox' class='vboxCheckbox vboxEnablerCheckbox' name='vboxSettingsUSBEnabled' /> <span class='translate'>Enable USB Controller</span></label></td>
+		<td><label><input type='checkbox' class='vboxCheckbox vboxEnablerCheckbox' name='vboxSettingsUSBEnabled' /> <span class='translate'>Enable USB Controller</span></label></td>
 	</tr>
 	<tr>
 		<td style='width: 100%; padding-left: 20px;'><label><input type='checkbox' class='vboxCheckbox' name='vboxSettingsUSBEnabledEHCI' /> <span class='translate vboxEnablerListen'>Enable USB 2.0 (EHCI) Controller</span></label></td>
